Add dependency liblzma-dev to make cargo clippy work

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           toolchain: nightly
           components: rustfmt clippy rust-src llvm-tools
+      - name: Install apt dev dependencies
+        run: sudo apt-get update && sudo apt-get install -y liblzma-dev
       - name: Clippy
         run: cargo clippy --no-deps
       - name: Check formatting
