--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install rust nightly
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: nightly
+          toolchain: nightly-2024-09-19
           components: rustfmt clippy rust-src llvm-tools
       - name: Install apt dev dependencies
         run: sudo apt-get update && sudo apt-get install -y liblzma-dev
@@ -46,7 +46,7 @@ jobs:
       - name: Install rust nightly
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
-          toolchain: nightly
+          toolchain: nightly-2024-09-19
           components: rustfmt clippy rust-src llvm-tools
 
       - name: Install wasm-pack
